--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My Portfolio</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Emmanouilidis Nikolaos | Ruby on Rails | React | Fullstack web developer
+    </title>
   </head>
   <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is the main page of my portfolio site.</p>
-    <a href="blog.html">Visit My Blog</a>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
