--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="I am a web developer, providing custom, complete solutions to small and medium sized businesses. Currently using Ruby on Rails and ReactJS, open to new tech. Commitment and loyalty is the name of the game."
+      content="Nikolaos Emmanouilidis, a full-stack web developer based in Komotini, Greece, specializing in Ruby on Rails, React, and PostgreSQL. Offering custom solutions for small and medium-sized businesses, with a focus on remote work and a proven background in leadership from 17 years in law enforcement."
     />
+    <meta
+      name="keywords"
+      content="Ruby on Rails developer, React developer, full-stack developer, web developer Greece, remote web developer, PostgreSQL, JavaScript developer, Komotini developer, career transition developer"
+    />
+    <meta name="author" content="Nikolaos Emmanouilidis" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      property="og:title"
+      content="Nikolaos Emmanouilidis | Ruby on Rails & React Developer"
+    />
+    <meta
+      property="og:description"
+      content="Full-stack web developer in Komotini, Greece, specializing in Ruby on Rails, React, and PostgreSQL. Explore my portfolio for custom solutions and open-source contributions."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nikemmanouilidis.gr/" />
+    <meta property="og:image" content="public/person.jpeg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Nikolaos Emmanouilidis | Ruby on Rails & React Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Full-stack web developer in Greece, skilled in Ruby on Rails, React, and PostgreSQL, with a unique background in law enforcement. Available for remote opportunities."
+    />
+    <meta name="twitter:image" content="public/person.jpeg" />
     <title>
-      Emmanouilidis Nikolaos | Ruby on Rails | React | Fullstack web developer
+      Nikolaos Emmanouilidis | Ruby on Rails | React | Full-Stack Web Developer
     </title>
   </head>
   <body>
