Added seo tool meta tag

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       content="Nikolaos Emmanouilidis | Ruby on Rails & React Developer"
     />
     <meta
+      name="google-site-verification"
+      content="c2bs8BiFQ7FvVr0lGgtQAL6EC0M-tAIdjT3nrx5DD6A"
+    />
+    <meta
       property="og:description"
       content="Full-stack web developer in Komotini, Greece, specializing in Ruby on Rails, React, and PostgreSQL. Explore my portfolio for custom solutions and open-source contributions."
     />
